# pyscript-collective

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  GOVERNANCE.md  Makefile  README.md  TODO.md  __main__.py  app.py  awesome-pyscript.md  environment.yml  here.py  index.html  noxfile.py  pyproject.toml  resources.py
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  misc.yml
.github/workflows/: constraints.txt  release.yml  run-tests.yml  tests.yml
docs/: conf.py  index.md  requirements.txt
docs/building/: bulma.md  cmd_runner.md  examples_template.md  first_pyscript.md  index.md  pages.md  playwright.md  proper_package.md  resource_listing.md
docs/developers/: cdn_mode.md  index.md
examples/: add_twonumbers.html  babylonjs-minimal-demo.html  elif.html  else-if.html  for_loop.html  function.html  hello_world.html  if.html  p5js-minimal-demo.html  while_loop.html
examples/bouncy-bubbles-p5js/: bouncy_bubbles.py  index.html
examples/django/todo/: db.sqlite3
examples/dna/: index.html
examples/dna/styles/: styles.css
examples/interest_calculator/: index.html
gallery/: __init__.py  index.html
gallery/authors/: index.html  meg-1.html  meg-1.md  pauleveritt.html
gallery/examples/altair/: code.html  index.html
gallery/examples/antigravity/: antigravity.py  code.html  index.html
gallery/examples/hello_world/: code.html  index.html  index.md
gallery/examples/hello_world_py/: code.html  hello_world.js  index.html
gallery/examples/interest_calculator/: calculator.py  code.html  index.html  index.md
pages/: about.html  contact.html  contributing.html  faq.html  faq.md  gallery.html  running.html
pyscript/: README.md
src/psc/: __init__.py  __main__.py  app.py  fixtures.py  here.py  index.html  resources.py
src/psc/pages/: about.md  contact.md  contributing.html  gallery.html  running.html
src/psc/pyodide/: README.md
src/psc/pyscript/: pyscript.js
src/psc/static/: psc.css
src/psc/templates/: authors.jinja2  example.jinja2  examples.jinja2  gallery.jinja2  homepage.jinja2  page.jinja2  (+1 more)
static/: prism.css  prism.js
templates/: author.jinja2  authors.jinja2  example.jinja2  example_code.jinja2  homepage.jinja2
tests/: conftest.py  test_app.py  test_author_pages.py  test_examples.py  test_fixtures.py  test_generic_example.py  test_here.py  test_main.py  test_pages.py  test_resources.py
tests/examples/: __init__.py  test_altair.py  test_antigravity.py  test_hello_world.py  test_hello_world_py.py  test_interest_calculator.py  test_resources.py
(+24 files in other folders)
